--- a/docs/de-de/modules/maerkte/pages/metro.adoc
+++ b/docs/de-de/modules/maerkte/pages/metro.adoc
@@ -1,9 +1,470 @@
+
 = Metro
 :author: team-plenty-channel
 :keywords: Metro, Metro.de, Metro einrichten, Metro.de einrichten
 :description: Multi-Channel in plentymarkets: Richte die Schnittstelle zum Marktplatz Metro in deinem plentymarkets System ein.
 :id: BYFCMFT
 
+:market: Metro
+:metro:
+
 METRO ist eine B2B-fokussierte E-Commerce-Plattform, auf der sich Verkäufer:innen und Lieferant:innen in einer wachsenden und gastfreundlichen Community treffen.
 
-TIP: Wie du das Metro-Plugin in plentymarkets einrichtest, ist im link:https://marketplace.plentymarkets.com/metro_6600[User Guide des Plugins beschrieben].
+[#7756484118]
+== Bei METRO registrieren
+
+Trete der Verkäufer:innengemeinschaft des europäischen Non-Food-Markts bei und komme mit Millionen von HoReCa-Kund:innen und -Profis aus verschiedenen Branchen in Kontakt.
+Besuche das link:https://www.metro-selleroffice.com/[Selleroffice] und registriere dich als Verkäufer:in.
+
+[#8289095872]
+== Plugin in plentymarkets installieren
+
+Um METRO in plentymarkets nutzen zu können, installiere zuerst das link:https://marketplace.plentymarkets.com/metro_6600[METRO-Plugin^] in deinem plentymarkets System. Dieses und andere Plugins findest du im link:https://marketplace.plentymarkets.com/[plentyMarketplace^].
+
+:plugin: METRO
+:main-client:
+include::maerkte:partial$plugin-installation.adoc[]
+
+[#3863568703]
+=== Auftragsherkunft aktivieren
+
+:referrer: METRO
+:referrer-option: pass:quotes[Option *METRO*]
+
+include::maerkte:partial$auftragsherkunft-aktivieren.adoc[]
+→ Plugin-UI und Assistenten sind nun sichtbar.
+
+[#1194782543]
+== Plugin einrichten
+
+Das METRO-Plugin richtest du über die folgenden Assistenten ein:
+
+* *Plugin Konfigurationsassistent*
+* *Zuordnungsassistent für Grund der Retoure*
+* *Artikelexport Vorbereitungsassistent*
+
+*_Wichtig:_*
+
+* METRO-Assistenten können nur im Backend-Plugin-Set installiert werden.
+* Die METRO-Assistenten werden erst sichtbar, wenn das Plugin erfolgreich installiert wurde und die Auftragsherkfunt *METRO* aktiv ist.
+
+[#5675802010]
+=== Der Plugin Konfigurationsassistent
+
+Diesen Assistenten findest du im Menü *Einrichtung » Assistenten » Omni-Channel » METRO*.
+Folgende Plugin-Einstellungen können mit diesem Assistenten verwaltet werden:
+
+* METRO API-Verbindung
+* Artikelexport
+* Warenbestand und Verkaufspreis Export
+* Auftragsabwicklung
+
+*_Hinweis:_* Du kannst die Einstellungen der METRO-Assistenten jederzeit anpassen.
+
+[[metro-configuration-assistant]]
+.Metro Konfigurationsassistent
+[cols="2,3a"]
+|===
+|Einstellung |Erläuterung
+
+2+|*API-Anmeldung*
+
+|*Kundenschlüssel*
+|METRO Kundenschlüssel eintragen.
+
+|*Kundengeheimnis*
+|METRO Kundengeheimnis.
+
+2+|*Artikelexport*
+
+|*Sollen wir Artikeldaten nach METRO exportieren ?*
+| Auswahlmöglichkeiten: +
+ Artikelexport *An* oder *Aus*
+
+*_Hinweis:_* Der Artikelexport läuft ein Mal am Tag.
+ Artikel werden nicht direkt zum  METRO-Backend hochgeladen. Die vom Plugin exportierten .csv Dateien werden von METRO-Mitarbeitern manuell überprüft. Du kannst den Status deiner Uploads vom METRO-Backend abfragen. Wenn Probleme festgestellt werden, kann ein Bericht von *Produkte aus METRO-Inventar verwalten* Tab heruntergeladen werden.
+
+*_Wichtig:_* METRO-Artikel sind eindeutig, das System erlaubt keine doppelten Einträge. Wenn Du der erste Uploader eines Artikels bist, wirst Du der alleinige Manager der Details und Spezifikationen dieses Artikels. Nachfolgende Uploader erstellen einfach ein *Angebot* für diesen Artikel.
+
+*_Hinweis:_* Artikel für welche Du kein Eigner bist, werden im METRO-Backend erst Sichtbar, nach dem ein Angebot für diesen Artikel erstellt hast.
+
+|*Welchen Barcode-Typ sollen wir als  Artikelkennung für exportierte Artikel verwenden?*
+| Wähle einen Barcode-Typ.
+
+2+|*Warenbestand und Verkaufspreis Export*
+
+|*Sollen wir Warenbestand und Verkaufspreise nach METRO exportieren ?*
+|Auswahlmöglichkeiten: +
+Warenbestand und Verkaufspreis Export *An* oder *Aus*
+
+|*METRO-Angebote sind standardmäßig für B2B* und B2C-Kunden verfügbar. Sollen wir Angebote nur für B2B-Kunden aktivieren?*
+|Stelle den Schalter auf *grün*, wenn Deine Angebote nur für B2B-Kunden verfügbar sein sollen.
+
+|*Die automatische Sku-Erstellung basiert auf:*
+|Auswahlmöglichkeiten:
+* *Variantennummer.*
+*  *Varianten-Id*
+* *Modell*
+* *Barcode*
+
+|*Welche Eigenschaft sollen wir verwenden, um Artikel für die METRO-Spedition zu kennzeichnen ?*
+| Weisen Sie eine Eigenschaft zu, die als METRO-Speditions-Tag verwendet werden soll.
+
+*Tipp:* Diese Eigenschaft muss auf Varianten verknüpft sein, für die eine METRO-Spedition erforderlich ist.
+
+|*Der maximale Lieferzeitpuffer beträgt?*
+|Weise einen numerischen Wert zu.
+Diese Eingabe definiert die maximale Zeit für die Lieferung eines Artikels.
+
+*_Hinweis:_* Die Eingabe wird zur Artikel enthaltenen *Varianten → Verfügbarkeit 1-10 hinzugefügt*.
+*maxProcessingTime* darf nicht größer oder gleich mit 100 sein.
+
+|*Sollen wir jedes Mal eine vordefinierten Warenbestand senden?*
+| Weise einen numerischen Wert zu. Dieser Wert wird für alle Artikel als Warenbestand exportiert.
+
+2+|*Auftragsabwicklung*
+
+|*Sollen wir  METRO Aufträge importieren ?*
+|Auswahlmöglichkeiten:
+ Auftragsimport *An* oder *Aus*
+
+|*Verschiebe Aufträge, welche von METRO storniert werden, in den Auftragsstatus:*
+| Wähle einen Auftragsstatus aus.
+
+|*Stornierungsanfragen ab Auftragsstatus... automatisch ablehnen*
+|Wähle einen Auftragsstatus aus.
+
+2+|*Retoure Anfragen*
+
+|*Sollen wir für METRO Retoure Anfragen, Retoure Aufträge anlegen ?*
+|Auswahlmöglichkeiten:
+ Retoure Aufträge erstellen  *An* oder *Aus*
+
+|*Status für akzeptierte Retoure Anfragen*
+| Wähle einen Auftragsstatus aus.
+
+|*Status für Kunden stornierte Retoure Anfragen*
+|Wähle einen Auftragsstatus aus.
+
+*_Wichtig:_* Das Plugin importiert von Kunden Stornierte Retoure Anfragen automatisch.Der Retoure Auftrag wird nur dann in den von Dir ausgewählten Auftragsstatus verschoben, wenn die Retoure Anfrage noch nicht akzeptiert wurde.
+Für dieses Verhalten müssen folgende Auftragsstatus definiert sein:
+* Retoure Anfrage akzeptiert.
+* Retoure Anfrage abgelehnt.
+
+2+|*Zusammenfassung*
+
+|*Eine Zusammenfassung aller Informationen die vom Assistenten angepasst werden*
+|Auf dieser Seite kannst Du deine Angaben überprüfen und den Assistenten *fertigstellen*.
+|===
+
+[#8435936916]
+==== Der Zuordnungsassistent für Grund der Retoure
+
+Das METRO-Plugin importiert alle Retourenanfragen als Retourenaufträge.
+Dieser Assistent unterstützt dich beim Erstellen von Zuordnungen zwischen *METRO Retourengrund* und plentymarkets *Grund der Retoure*:
+
+ 1. Öffne das Menü *Einrichtung » Assistenten » Omni-Channel » METRO*.
+ 2. Öffne den *Zuordnungsassistent für Grund der Retoure*.
+ 3. Erstelle die benötigten Zuordnungen.
+ 4. Speichere die Einstellungen.
+
+[#7926836869]
+=== Der Artikelexport Vorbereitungsassistent
+
+Der Artikelexport verwendet den plentymarkets Katalog um zu entscheiden, welche Artikeldaten zu METRO exportiert werden.
+Dieser Assistent unterstützt dich beim Erstellen von Katalogvorlagen für den METRO-Artikelexport.
+Den Assistenten für den METRO-Artikelexport findest Du im Menü *Einrichtung » Omni-Channel » METRO*.
+
+[#5386707307]
+=== Katalog mit dem Assistenten erstellen
+
+:catalogue-assistant-name: Kataloge erstellen - OTTO Market
+:number-of-boxes: Info-Boxen
+:catalogue-path: pass:quotes[*Einrichtung » Omni-Channel » METRO*]
+:catalogue-note: Für jede METRO-Kategoriegruppe benötigst du einen eigenen Katalog.
+:mapping-fields: weitere
+
+include::partial$catalogue-assistant-config.adoc[]
+
+[#3269750951]
+== Der Katalog
+
+Der Katalog ermöglicht es, Artikeldaten auf verschiedene Marktplätzen zu exportieren.
+Weitere Informationen zum Thema plentymarkets Katalog findest Du im Handbuch unter [Kataloge verwalten](https://knowledge.plentymarkets.com/daten/daten-exportieren/kataloge-verwalten)
+
+Informationen zum Thema plentymarkets Datenquellen findest Du im Handbuch, unter: [Datenquellen zuordnen](https://knowledge.plentymarkets.com/daten/daten-exportieren/kataloge-verwalten).
+
+[#7343351364]
+==== Verknüpfe METRO-Datenfelder mit plentymarkets Datenquellen
+
+1. Öffne das Menü *Daten » Kataloge*.
+2. Klick auf das erstellte METRO Katalog. +
+→ Das Katalog ist offen. +
+→ Links stehen METRO-Datenfelder. +
+ *_Hinweis:_* Pflichtfelder werden mit einem Sternchen markiert.
+3. Wähle eine geeignete plentymarkets Datenquelle auf der rechten Seite.
+4. Füge einem Datenfeld eine zusätzliche Datenquelle hinzu, mit auf Klick auf *Quelle hinzufügen*. +
+→ Eine neue Zeile für diese zusätzliche Zuordnung wird angezeigt.
+*_Hinweis:_* Selbst wenn Du mehr als eine Datenquelle zuweist, wird nur ein einziger Wert exportiert. Die Daten werden in der Reihenfolge der Zuordnung geprüft. Sollte das erste Datenfeld keinen Wert liefern, wird das zweite Datenfeld exportiert.
+5. Erstelle alle erforderlichen Feldzuordnungen für diesen Katalog. +
+→ Alle Pflichtfelder müssen mit einer plentymarkets Datenquelle verknüpft sein.
+6. *Speichere* die Einstellungen. +
+*_Hinweis:_* Erstellen eine Eigenschaft für jede Maßeinheit, welche Du verknüpfen möchtest. Weitere Informationen Zum Thema Eigenschaften findest Du im Handbuch unter  [Variantendaten mit Eigenschaften pflegen](https://knowledge.plentymarkets.com/daten/daten-exportieren/kataloge-verwalten#30)
+
+[#7630357625]
+== Die METRO market Kategoriegruppe
+
+Die Eigenschaft *METRO market category group / METRO market Kategoriegruppe* wird vom Plugin erstellt, sobald Du den *Artikelexport Vorbereitungsassistent* zum ersten Mal fertiggestellt hast. Diese Eigenschaft muss mit allen Varianten verknüpft sein, die zu METRO exportiert werden sollen. Damit der Export funktioniert, muss in der Eigenschaft auch der Wert einer METRO-Kategorie verknüpft sein. Der Artikel wird im Metro-Shop in dieser Kategorie veröffentlicht.
+
+[.instruction]
+.Eigenschaft für METRO market Kategoriegruppe mit Variante verknüpfen.
+
+. Öffne das Menü *Artikel » Artikel bearbeiten*.
+. Öffne den Artikel.
+. Öffne das Tab *Variante » Eigenschaften*.
+. Klicke in das Eingabefeld *Eigenschaften*.
+. Wähle die *METRO market category group / METRO market Kategoriegruppe* Eigenschaft und klicke auf *Hinzufügen*.
+. Wähle einen *Wert* aus der Dropdown-Liste.
+. *Speichere* die Einstellungen. +
+→ Der Artikel wird in der gewählten Metro-Kategorie veröffentlicht.
+
+[#7251018515]
+=== Der Warenbestand und Verkaufspreis Export
+
+Der Warenbestand und Verkaufspreis Export wird durch *
+* oder *SKU* Spiegelung ermöglicht.
+*_Wichtig:_* Bitte überprüfe Einrichtung der *Artikel » Verfügbarkeit* unter *Einrichtung » Artikel » Verfügbarkeit* und dessen Zuweisung auf deinen Artikel * ein erfolgreicher Warenbestand und Verkaufspreis Export kann ohne diese Option nicht durchgeführt werden.
+
+[#2113838211]
+==== Warenbestand und Verkaufspreis Export via GTIN
+
+Der schnellste Weg um Warenbestand und Verkaufspsreis Daten nach METRO zu exportieren basiert auf GTIN.
+Der Warenbestand und Verkaufpsreis Export erfolgt automatisch und ein Angebot wird zum METRO-Artikel gesendet.
+
+[#4138743662]
+==== Warenbestand und Verkaufspreis Export via SKU
+
+1. Öffne das Menü *Einrichtung » Assistenten » Omni-Channel » METRO » Plugin Konfigurationsassistent » Schritt: Warenbestand und Verkaufspreis Export*.
+2. Wähle eine Datenquelle unter *Die automatische SKU-Erstellung basiert auf:* .
+3. Assistenten *Fertigstellen*.
+4. Überprüfe, ob in deinem METRO-Dashboard ein Angebot für den betreffenden Artikel vorhanden ist *_Hinweis:_* Du kannst ein Angebot auch manuell über das METRO-Dashboard erstellen.
+6. Stelle Sicher, dass die gleiche SKU im Artikel auf beiden Systemen die gleiche ist. +
+*_Hinweis:_* Du Kannst SKU-Bulk-Zuordnungen auf METRO erstellen, indem Du *Angebote verwalten* öffnest. Für weitere Informationen wende dich bitte an deinem METRO-Support.
+
+[#4807852476]
+=== Voraussetzungen für den Artikelexport
+
+* Variante muss *aktiv* sein.
+* Variante muss für den Marktplatz: METRO freigeschaltet sein.
+* Die Metro Eigenschaft *METRO market Kategoriegruppe* und ein korrekter Wert muss mit der Variante verknüpft sein.
+* Die Variante muss mindestens ein Bild enthalten welches auch für den Marktplatz: METRO freigeschaltet ist.
+* Die Variante muss den Barcode-Typ: GTIN oder die MPN + Hersteller als Exportkennung nutzen.
+* Die enthaltene *Artikel Beschreibung / Description* darf nur folgende HTML tags enthalten: +
+*&lt;p&gt; &lt;ul&gt; &lt;ol&gt; &lt;li&gt; &lt;span&gt; &lt;br&gt;*
+
+[#8758031625]
+=== Vorraussetzungen für den Warenbestandsexport
+
+* Warenbestand NETTO muss Positiv sein.
+
+→ Varianten mit einem negativen Warenbestand werden mit den Warenbestand 0 exportiert.
+* Varianten müssen einen Verkaufspreis für Marktplatz: METRO enthalten. Die Währung dieses Verkaufspreises mus EUR sein.
+* Der Verkaufspreis muss die Summe von  *Verkaufspreis BRUTTO + Versandkosten Brutto* sein.
+
+*_Wichtig:_*
+
+* Verkaufspreise für *Mengenpreis* (mit de Option *Ab Menge*) muss auch die Summe von *Verkaufspreis BRUTTO + Versandkosten Brutto* sein.
+* Bitte beachte, dass der Verkaufspreis für eine Mindestmenge von 10 Stück nicht höher sein kann als ein Verkaufspreis für eine Mindestmenge von 5 Stk.
+* Da die METRO-Verkaufspreise Versandkosten enthalten müssen, werden importierte Bestellungen als bezahlt importiert und enthalten 0 Versandkosten.
+* Verkaufspreise werden nicht mit der Artikelexport .csv nach METRO exportiert, sondern über den Prozess *Warenbestand und Verkaufspreis Export durchgeführt.
+
+Der Warenbestand und Verkaufspreis Export wird Dynamisch ausgeführt, abhängig von der Anzahl der Varianten, die aktualisiert werden müssen:
+
+* Alle *15* Minuten, für bis zu *500* Varianten.
+* Stündlich, von *500* bis zu *1500* Varianten.
+* Ein  Mal am Tag für alles über *1500* Varianten.
+
+*_Hinweis:_* Der Warenbestand und Verkaufspreis Export findet nicht statt, wenn keine GTIN / SKU Spiegelung besteht.
+
+[#2395556941]
+==== Sende ein Angebot zu einem schon vorhandenen METRO-Artikel
+
+Diese Funktion erfordert keinen Artikelexport und verwendet eine der folgenden Kennungen, um ein Angebot zu erstellen:
+
+* *GTIN*
+* *SKU*
+
+Um ein Angebot zu erstellen, müssen die folgenden Einstellungen beachtet werden:
+
+* Die Variante muss den entsprechenden Wert für *METRO Plugin Konfigurationsassistent » Die automatische SKU-Erstellung basiert auf:* enthalten.
+* *GTIN / SKU* Spiegelung zwischen plentymarkets und METRO artikel muss existieren.
+* Variante muss *aktiv* unter: *Artikel » Variante » Einstellungen » Bereich Verfügbarkeit*.
+* Die Variante muss die Herkunft: *METRO* unter: *Artikel » Variante » Reiter Verfügbarkeit » Bereich Marktplatz* enthalten.
+* Variante muss für den *Standard Mandanten* unter *Artikel » Variante » Reiter Verfugbarkeit » Mandant* freigeschaltet sein.
+* *WB Netto* muss Positiv sein.
+* Variante muss einen Verkaufspreis für Marktplatz: *METRO* enthalten.
+* Währung der des Verkaufspreises muss *EUR* sein.
+* Der exportierte Wert des Verkaufspreises muss die Summe von *Verkaufspreis BRUTTO + Versandkosten BRUTTO* sein.
+
+Sobald diese Einstellungen vorgenommen wurden, gibt die Funktion *Warenbestand und Verkaufspreis Export* ein Angebot für den Artikel ab.
+
+[#5226544237]
+=== Artikel Lieferzeiten einrichten
+
+Damit METRO Angebote funktionieren muss eine *minimale* und *maximale Lieferzeit* definiert und  verknüpft sein.
+
+[#4607614564]
+==== Die Mindestlieferzeit konfigurieren
+
+1. Öffne das Menü *Einrichtung » Artikel » Variante » Verfugbarkeit*.
+2. Definiere die relevanten *durchschnittlichen Lieferzeiten*.
+3. Erteile den Varianten eine *Durschnittliche liferzeit* unter:*Artikel » Variante » Einstellungen » Bereich Availability » *1* to *10*. +
+→ Die Mindestlieferzeit ist eingerichtet und verknüpft.
+
+[#6925994604]
+==== Die maximale Lieferzeit konfigurieren
+
+1. Öffne das Menü *Einrichtung » Assistenten » Omni-Channel » METRO »  Plugin Konfigurationsassistent*
+2. Öffne den Schritt *Warenbestand und Verkaufspreis Export*.
+3. Füge einen Wert für *Der maximale Lieferzeitpuffer beträgt?* ein.
+
+→ Die maximale Lieferzeit ist eingerichtet und verknüpft.
+
+[#9331181541]
+== Der Auftragsimport
+
+Informationen und Besonderheiten des Auftragsimports / der Auftragsabwicklung beim den METRO-Marktplatz.
+
+* Der Auftragsimport läuft alle 15 Minuten.
+* Das Plugin erstellt aus jeder METRO-Bestellposition Einzelbestellungen. +
+*_Beispiel:_* Wenn Sie 2 Artikel *X* und 3 Artikel *Y* haben, erhältst Du einen Auftrag mit 2 Artikeln *X* und einen weiteren Auftrag mit 3 Artikeln *Y*. Verwandte Aufträge können mit Hilfe des Suchfilters *Ext. Auftragsnummer* gefunden werden.
+* Jede METRO-Bestellposition wird separat bearbeitet (Erfüllung, Rechnung, Ereignisaktionen, Retouren, etc.)
+* Alle importierten Aufträge werden als *Bezahlt* importiert.
+
+[#8798043284]
+=== Unterstützte Zahlungsarten
+
+Die folgenden Zahlungsmethoden werden unterstützt und beim Auftragsimport automatisch erkannt:
+
+* *Lastschrift Zahlungen* werden als "Metro Direct Debit" importiert.
+* *RatePAY Rechnungen* werden als "Metro Open Invoice" importiert.
+* *Kreditkarten Zahlungen* werden als "Metro Direct Checkout" importiert.
+* *Paypal Zahlungen* werden als "Metro Paypal" importiert.
+* *Klarna Sofortüberweisung Zahlungen* werden als "Metro SOFORT" importiert.
+* *Alle anderen Zahlungsarten* werden auch als "Metro Direct Checkout" importiert.
+
+* *_Hinweis:_* Das Plugin importiert anonyme Proxy-E-Mail-Adressen für METRO-Käufer.
+
+[#1045309002]
+== Ereignisaktionen einrichten
+
+Mit den xref:automatisierung:ereignisaktionen.adoc[Ereignisaktionen] des Plugins sendest Du METRO Informationen über deine Aufträge.
+
+[#5583680407]
+=== Verfügbare Ereignisaktionen
+
+[[table-woocommerce-event-procedures]]
+.Verfügbare Ereignisaktionen
+[cols="2,3a"]
+|===
+|Ereignisaktion |Erläuterung
+
+|*Sende Storno Benachrichtigung an METRO,* +
+*Begründung: "Kein Warenbestand*
+|Diese Ereignisaktion sendet eine Stornierungsbenachrichtigung zum METRO-Auftrag.
+
+|*Sende Storno Benachrichtigung an METRO,* +
+*Begründung: "Falscher Preis"*
+|Diese Ereignisaktion sendet eine Stornierungsbenachrichtigung zum METRO-Auftrag.
+
+|*Sende Storno Benachrichtigung an METRO,* +
+*Begründung: "Falsche Artikeldaten"*
+|Diese Ereignisaktion sendet eine Stornierungsbenachrichtigung zum METRO-Auftrag.
+
+|*Versandbestätigung an METRO senden*
+|Diese Ereignisaktion löst die Erfüllungsbenachrichtigung aus. Eine Tracking-Nummer ist nicht erforderlich.
+
+|*Sende  Auftrag  "In Bearbeitung" an METRO*
+|Bei erfolgreichem Auftragsimport löst dieses Ereignis eine Auftragsbestätigung für die METRO-Bestellung aus und verschiebt die Bestellung vom Status: *platziert* in *Verarbeitung*. Dies ist ein wichtiger Schritt, da nur Bestellungen mit dem Status: *Verarbeitung* in den Status: *Versand* verschoben werden können.
+
+Hier empfehlen wir folgende Einrichtung der Ereignisaktion
+
+. Öffne das Menü *Einrichtung » Aufträge » Ereignisse » Neu*.
+. Gib einen *Namen* ein.
+. Wähle *Statuswechsel* aus der Dropdown-Liste aus.
+. Wähle Status: *4.In Versandvorbereitung* oder Status: *5. Versandbereit*.
+. Füge die Aktion *Sende Auftrag "In Bearbeitung" an METRO* hinzu.
+
+*_Wichtig:_* METRO Ereignisaktionen sind mit dem Ereignis *Neuer Auftrag* nicht kompatibel.
+
+|*Rechnung an METRO sende*
+|Mit dieser Ereignisaktion sendest Du eine Rechnung an METRO.
+
+|*Sende Retourenetikett an METRO*
+|Öffne das Menü *Aufträge » Versand-Center* um *Return Label* für den Retoure Auftrag zu erstellen und löse diese Ereignisaktion um das erstellte Retourenetikett an METRO zu senden.
+
+|*Sende 'Retouren Anfrage akzeptiert' an METRO*
+|Diese Ereignisaktion benachrichtigt METRO, die Retouren Anfrage zu akzeptieren.
+
+|*Rücksendung erhalten' an METRO melden*
+|Wenn der Käufer die versendeten Artikel nicht akzeptiert / erhält, wird die Bestellung automatisch zurück gesendet. Erstelle hierfür einen Retoure Auftrag und löse dieses Ereignis aus.
+
+|*Sende 'Retouren Anfrage abgelehnt' an METRO*
+|Diese Ereignisaktion sendet eine Benachrichtigung an METRO, um die vom Kunden übermittelte Retoure Anfrage abzulehnen.
+
+|*Sende Gutschrift an METRO*
+|Erstelle einen *Gutschrift Auftrag* von einem *Retoure Auftrag* das akzeptiert wurde und schreibe eine *Gutschrift* auf dem *Gutschrift Auftrag*. Löse diese Ereignisaktion aus, um die Gutschrift an METRO zu senden.
+|===
+
+[#0746212710]
+=== Beispiel: Ereignisaktion einrichten
+
+. Öffne das Menü *Einrichtung » Aufträge » Ereignisse*.
+. Klick auf *Ereignisaktion hinzufügen*. +
+→ Das Fenster *Neue Ereignisaktion erstellen* ist offen.
+. Trage einen Namen ein.
+. Wähle ein *Ereignis*, zum Beispiel *Auftragsänderung » Warenausgang gebucht*
+. *Speichere* die Einstellungen.
+. Füge den Filter *Auftrag » Auftragstyp » Auftrag* hinzu.
+. Füge den Filter *Auftrag » Herkunft » METRO* hinzu.
+. Wähle eine Aktion vom Bereich Plugin aus.
+. *Speichere* die Einstellungen.
+
+[#0922092229]
+== Plugin-Hilfe nutzen
+
+Im plentymarkets Backend findest du das Menü *Einrichtung » Märkte » METRO » Hilfe*. Mit dieser Plugin-Hilfe kannst Du folgende Plugin-Prozesse prüfen:
+
+* Download-Test der Artikelexport .csv für eine METRO-Kategorie deiner Wahl.
+* Überprüfe die Exportbedingungen für eine Artikelvariante und vergleiche diese mit den Eigenschaften eines Katalogs deiner Wahl.
+* Überprüfe die Pluginbereitschaft.
+
+[#5721453049]
+=== CSV-Datei des Artikelexports herunterladen
+
+. Öffne das Menü *Einrichtung » Märkte » METRO » Hilfe*.
+. Wähle einen Katalog aus der *Katalog-Liste*.
+. Klick auf *CSV herunterladen*.
+. Überprüfe den exportierten Inhalt für den ausgewählten Katalog.
+
+[#5603650009]
+=== Varianten Export Bedingungen überprüfen
+
+. Öffne das Menü *Einrichtung » Märkte » METRO » Hilfe*.
+. Eine Varianten-ID eintragen.
+. Wähle den Varianten relevanten METRO-Katalog aus.
+. Klick auf *überprüfen*. +
+→ Eine Liste der Exportbedingungen wird angezeigt. +
+  * *OK* = Die Bedingung ist erfüllt. +
+  * *X* = Die Bedingung ist nicht erfüllt.
+
+[#5659888624]
+=== Plugin Bereitschaft überprüfen
+
+1. Öffne das Menü *Einrichtung » Märkte » METRO » Hilfe*.
+2. Klick auf *überprüfen*. +
+→ Das Plugin überprüft folgendes:
+* Ist die Herkunft *METRO* aktiv?
+* Kann eine Verbindung zur METRO-API hergestellt werden?
+* Ist mehr als eine Herkunft METRO im Menü *Einrichtung » Aufträge » Oder Auftragsherkunft* existiert und aktiv?
+* Ist die höchste verfügbare Herkunfts-ID aktiv?
