add plain text signature to email accounts assistant

--- a/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
@@ -198,7 +198,7 @@ In unverschlüsselter Form kann deine Kommunikation von Dritten eingesehen werde
 [#600]
 == E-Mail-Signatur speichern
 
-Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du deine Signatur, die dann in deinen E-Mail-Vorlagen automatisch eingefügt wird, wenn du die entsprechende Variable in der Vorlage eingefügt hast.
+Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du im Schritt *Signatur* deine Signatur im HTML-Format oder im reinen Textformat. Die Signatur wird dann in deinen E-Mail-Vorlagen automatisch eingefügt wird, wenn du die entsprechende Variable in der Vorlage eingefügt hast.
 
 [IMPORTANT]
 .Priorität der Signatur beachten
