--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -116,7 +116,7 @@ Go to *Setup » Client » [Select client] » Email » Newsletter*. Enter the log
 [#email-signature]
 === Saving the email signature
 
-Go to the *Email accounts* assistant in the *Setup » Assistants » Basic setup* menu to save the signature in the *Signature* step. The signature is then automatically added to your email templates when you inserted the corresponding variable in the template.
+Go to the *Email accounts* assistant in the *Setup » Assistants » Basic setup* menu to save the signature in HTML format or plain text in the *Signature* step. The signature is then automatically added to your email templates when you inserted the corresponding variable in the template.
 
 [IMPORTANT]
 .Note the priority of the signature
@@ -214,7 +214,7 @@ Go to *Setup » Assistants » Basic setup* and open the *Email accounts* assista
 [.collapseBox]
 .Settings in the *Email accounts* assistant in the *Messenger integration* step
 --
-[[table-info-service]]
+[[table-collect-emails]]
 .Collect all sent emails in the messenger module
 [cols="1,3"]
 |====
