--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -118,7 +118,7 @@ Wenn du Newsletter an deine Kund:innen versenden möchtest, gibst du die Zugangs
 [#e-mail-signatur]
 === E-Mail-Signatur speichern
 
-Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du im Schritt *Signatur* deine Signatur, die dann in deinen E-Mail-Vorlagen automatisch eingefügt wird, wenn du die entsprechende Variable in der Vorlage eingefügt hast.
+Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du im Schritt *Signatur* deine Signatur im HTML-Format oder im reinen Textformat. Die Signatur wird dann in deinen E-Mail-Vorlagen automatisch eingefügt wird, wenn du die entsprechende Variable in der Vorlage eingefügt hast.
 
 [IMPORTANT]
 .Priorität der Signatur beachten
@@ -216,7 +216,7 @@ Im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail
 [.collapseBox]
 .Einstellungen im Assistenten *E-Mail-Konten* im Schritt *Messenger-Integration*
 --
-[[table-info-service]]
+[[table-collect-emails]]
 .Alle gesendeten E-Mails im Messenger-Modul sammeln
 [cols="1,3"]
 |====
