--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -7,6 +7,7 @@
 Anders als du vielleicht vermutest, werden Aufträge nicht direkt im Menü *Aufträge » Aufträge (Testphase)* angelegt. Wie du Aufträge im System anlegst, z.B. wenn eine Bestellung per Telefon getätigt wird, ist auf dieser Seite beschrieben. Die folgenden Möglichkeiten stehen dir für die Auftragsanlage in plentymarkets zur Verfügung:
 
 * In der <<#create-order-in-contact-overview, Kontaktübersicht>>
+* In der <<#create-order-in-order-overview, Auftragsübersicht>>
 * In den <<#create-order-via-contact, Kontaktdaten>>
 * In einem bestehenden <<#create-order-via-existing-order, Auftrag>>
 * Über einen <<#create-order-via-cash-sale, Barverkauf>>
@@ -85,6 +86,11 @@ Neuen Auftrag über Barverkauf anlegen:
 . Wähle die Artikel und die entsprechenden Mengen, die du zum Auftrag hinzufügen möchtest.
 . *Speichere* (material:save[]) die Einstellungen. +
 → Der Auftrag wird angelegt.
+
+[#create-order-in-order-overview]
+== Auftrag oder Angebot aus der Auftragsübersicht anlegen
+
+Im Menü *Aufträge » Aufträge bearbeiten (Testphase)* kannst du in der Auftragsübersicht neue Aufträge oder Angebote anlegen. Klicke dazu links in der Seitennavigation auf (material:add[role=skyBlue]) *Neuer Auftrag*. Möchtest du anstatt eines Auftrags ein Angebot anlegen, wähle im ersten Schritt für den *Auftragstyp* die Option *Angebot*. Die übrige Vorgehensweise ist identisch zur Auftrags- bzw. Angebotsanlage in der <<#create-order-in-contact-overview, Kontaktübersicht>>. Folge dazu den <<#step-one-basics, Schritten 1 bis 3>>.
 
 [#create-order-in-contact-overview]
 == Auftrag oder Angebot aus der Kontaktübersicht anlegen
@@ -195,6 +201,10 @@ Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt w
 | *Auftragsvorlage*
 |Wähle die Vorlage des Auftrags aus der Dropdown-Liste.
 
+| *Kontakt*
+|Gib den Kontakt des Auftrags ein. Alle am Kontakt hinterlegten Daten werden automatisch hinzugefügt. +
+*_Tipp:_* Möchtest du einen Auftrag als Gast anlegen, wähle keinen Kontakt aus und füge stattdessen eine neue *Rechnungsadresse* bzw. eine neue *Lieferadresse* hinzu.
+
 2+^| *Auftragsdetails*
 
 | *Rechnungsadresse*
@@ -233,14 +243,18 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 
 |====
 
-Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter, indem du unten auf *ARTIKEL HINZUFÜGEN* klickst. Alternativ kannst du auch oben auf den Schritt *Artikel hinzufügen* klicken. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
-
+[TIP]
+.Auftrag als Gast anlegen
+====
+Möchtest du einen Auftrag als Gast anlegen, wähle im ersten Schritt _keinen_ Kontakt aus. Erstelle stattdessen in den Einstellungen *Rechnungsadresse* und *Lieferadresse* eine neue Rechnungsadresse bzw. eine neue Lieferadresse und speichere die Einstellungen. Anschließend kannst du mit der Auftragsanlage als Gast fortfahren.
+====
 
 [.collapseBox]
 .*Neue Lieferadresse anlegen*
 --
 
-Von der Dropdown-Liste im Feld *Lieferadresse* aus kannst du nicht nur eine bestehende Lieferadresse wählen, du kannst auch eine neue anlegen. Um eine neue Lieferadresse anzulegen, gehe wie im Folgenden beschrieben vor.
+Von der Dropdown-Liste im Feld *Lieferadresse* aus kannst du nicht nur eine bestehende Lieferadresse wählen, du kannst auch eine neue anlegen. Um eine neue Lieferadresse anzulegen, gehe wie im Folgenden beschrieben vor. +
+*_Tipp:_* Für eine neue Rechnungsadresse sind die Einstellungen identisch.
 
 [.instruction]
 Neue Lieferadresse anlegen:
@@ -311,6 +325,8 @@ Bei bestimmten Ländern, z.B. Vereinigtes Königreich, wird die Reihenfolge der 
 |====
 
 --
+
+Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter, indem du unten auf *ARTIKEL HINZUFÜGEN* klickst. Alternativ kannst du auch oben auf den Schritt *Artikel hinzufügen* klicken. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
 
 [#step-two-add-items]
 === Schritt 2: Artikel hinzufügen
@@ -640,7 +656,7 @@ Möchtest du Eigenschaften erstellen und bearbeiten oder bist du noch nicht mit 
 Damit eine Eigenschaft an einer Auftragsposition gesetzt werden kann, muss sie in den Eigenschaftseinstellungen im Bereich *Optionen* als *Bestelleigenschaft* definiert werden. Lege unter xref:artikel:eigenschaften.adoc#property-options[Optionen] außerdem mögliche Aufpreise und Besteuerungen fest. Die hier hinterlegten Werte werden in die Auftragsberechnungen mit einbezogen. Ist bereits eine Eigenschaft mit einer Auftragsposition verknüpft, wird diese an der dazugehörigen Auftragsposition angezeigt.
 
 Die Eigenschaften werden in einer zweiten Tabellenzeile direkt unterhalb der dazugehörigen Auftragsposition angezeigt. Hier findest du Angaben zu *Name*, *Wert*, *Aufpreis* und *USt. %* der Eigenschaft. Die *USt. %*, also den hinterlegten Steuersatz, kannst du direkt in der Tabelle bearbeiten, wenn der Eigenschaftstyp dies zulässt. Zudem kannst du die Eigenschaften der Auftragspositionen *löschen* (material:delete[]). Gelöschte Eigenschaften werden dann für diesen Auftrag nicht berücksichtigt. +
-Um die Eigenschaften zu bearbeiten oder weitere bereits bestehende Eigenschaften zu einer Auftragspositionen hinzuzufügen, klicke auf *Eigenschaften bearbeiten* (material:edit[]).
+Um die Eigenschaften zu bearbeiten oder weitere bereits bestehende Eigenschaften zu einer Auftragspositionen hinzuzufügen, klicke rechts im Kontextmenü (material:more_vert[]) auf *Eigenschaften bearbeiten* (material:edit[]).
 
 
 Im Bearbeitungsfenster findest du folgende Angaben zu der Eigenschaft einer Auftragsposition:
@@ -679,12 +695,17 @@ Außerdem kannst du einen oder mehrere *Gutscheincodes* eingeben, die mit diesem
 Die Werte der Gutscheine werden mit dem Auftragswert verrechnet. Gutscheine werden nicht als Auftragspositionen im Warenkorb hinzugefügt. Gutscheine können nicht für Angebote eingelöst werden. Dies bedeutet, dass das Eingabefeld *Gutscheincodes* nur in der Auftragserstellung, nicht aber in der Angebotserstellung verfügbar ist.
 
 Unterhalb der Auftragsdetails wird eine Tabelle mit den ausgewählten Artikelpositionen angezeigt. Zusätzlich zu den Angaben in der vorherigen Ansicht werden dir in dieser weitere Preise und die Umsatzsteuer ausgegeben. Steuersätze lassen sich anpassen, wenn du dies in den <<#carrying-out-standard-settings, Standardeinstellungen>> erlaubt hast. +
+
+//Artikelbeschreibung anpassen noch gültig??
+
 Außerdem kannst du in dieser Tabelle die *Artikelbeschreibung* individuell anpassen. Die angepasste Artikelbeschreibung wird nur für diesen Auftrag übernommen. Das bedeutet, dass die angepasste Beschreibung für die Auftragsdaten und auch die Auftragsdokumente dieses Auftrags übernommen wird. Außerhalb dieses Auftrags bleibt die bereits im System hinterlegte Artikelbeschreibung bestehen. Beachte, dass es für die Artikelbeschreibung eine Beschränkung von 1500 Zeichen gibt.
 
 [.collapseBox]
 .*Tabelle individualisieren*
 --
 Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Standardmäßig werden dir beim Öffnen des Menüs folgende Tabellenspalten angezeigt:
+
+//Tabellenspalten prüfen
 
 * Artikel-ID/Varianten-ID
 * Varianten Nr.
