--- a/docs/de-de/modules/maerkte/pages/metro.adoc
+++ b/docs/de-de/modules/maerkte/pages/metro.adoc
@@ -211,22 +211,12 @@ Informationen zum Thema plentymarkets Datenquellen findest Du im Handbuch, unter
 6. *Speichere* die Einstellungen. +
 *_Hinweis:_* Erstellen eine Eigenschaft für jede Maßeinheit, welche Du verknüpfen möchtest. Weitere Informationen Zum Thema Eigenschaften findest Du im Handbuch unter  [Variantendaten mit Eigenschaften pflegen](https://knowledge.plentymarkets.com/daten/daten-exportieren/kataloge-verwalten#30)
 
-[#7630357625]
-== Die METRO market Kategoriegruppe
+[#1118666904]
+=== Varianten mit {market}-Produktkategorie verknüpfen
 
-Die Eigenschaft *METRO market category group / METRO market Kategoriegruppe* wird vom Plugin erstellt, sobald Du den *Artikelexport Vorbereitungsassistent* zum ersten Mal fertiggestellt hast. Diese Eigenschaft muss mit allen Varianten verknüpft sein, die zu METRO exportiert werden sollen. Damit der Export funktioniert, muss in der Eigenschaft auch der Wert einer METRO-Kategorie verknüpft sein. Der Artikel wird im Metro-Shop in dieser Kategorie veröffentlicht.
-
-[.instruction]
-.Eigenschaft für METRO market Kategoriegruppe mit Variante verknüpfen.
-
-. Öffne das Menü *Artikel » Artikel bearbeiten*.
-. Öffne den Artikel.
-. Öffne das Tab *Variante » Eigenschaften*.
-. Klicke in das Eingabefeld *Eigenschaften*.
-. Wähle die *METRO market category group / METRO market Kategoriegruppe* Eigenschaft und klicke auf *Hinzufügen*.
-. Wähle einen *Wert* aus der Dropdown-Liste.
-. *Speichere* die Einstellungen. +
-→ Der Artikel wird in der gewählten Metro-Kategorie veröffentlicht.
+:property-for-market-name: METRO market Kategoriegruppe
+:property-name: METRO market category group / METRO market Kategoriegruppe
+include::partial$catalogue-link-property-for-market-category.adoc[]
 
 [#7251018515]
 === Der Warenbestand und Verkaufspreis Export
