--- a/docs/de-de/modules/maerkte/partials/catalogue-assistant-config.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-assistant-config.adoc
@@ -21,7 +21,7 @@ Katalog mit dem Assistenten erstellen:
 :number-of-boxes: Info-Box(en)
 :anchor-additional-fields: #600
 :catalogue-path:
-:catalogue-note: Für jede OTTO-Kategoriegruppe benötigst du einen eigenen Katalog.
+:catalogue-note: Für jede {market}-Kategoriegruppe benötigst du einen eigenen Katalog.
 :mapping-fields:
 
 include::partial$catalogue-assistant-config.adoc[]
