--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -90,7 +90,7 @@ Neuen Auftrag über Barverkauf anlegen:
 [#create-order-in-order-overview]
 == Auftrag oder Angebot aus der Auftragsübersicht anlegen
 
-Im Menü *Aufträge » Aufträge bearbeiten (Testphase)* kannst du in der Auftragsübersicht neue Aufträge oder Angebote anlegen. Klicke dazu links in der Seitennavigation auf (material:add[role=skyBlue]) *Neuer Auftrag*. Möchtest du anstatt eines Auftrags ein Angebot anlegen, wähle im ersten Schritt für den *Auftragstyp* die Option *Angebot*. Die übrige Vorgehensweise ist identisch zur Auftrags- bzw. Angebotsanlage in der <<#create-order-in-contact-overview, Kontaktübersicht>>. Folge dazu den <<#step-one-basics, Schritten 1 bis 3>>.
+Im Menü *Aufträge » Aufträge (Testphase)* kannst du in der Auftragsübersicht neue Aufträge oder Angebote anlegen. Klicke dazu links in der Seitennavigation auf (material:add[role=skyBlue]) *Neuer Auftrag*. Möchtest du anstatt eines Auftrags ein Angebot anlegen, wähle im ersten Schritt für den *Auftragstyp* die Option *Angebot*. Die übrige Vorgehensweise ist identisch zur Auftrags- bzw. Angebotsanlage in der <<#create-order-in-contact-overview, Kontaktübersicht>>. Folge dazu den <<#step-one-basics, Schritten 1 bis 3>>.
 
 [#create-order-in-contact-overview]
 == Auftrag oder Angebot aus der Kontaktübersicht anlegen
