--- a/docs/en-gb/modules/markets/pages/check24.adoc
+++ b/docs/en-gb/modules/markets/pages/check24.adoc
@@ -496,7 +496,7 @@ include::partial$download_export-file.adoc[]
 |===
 | Column header | Explanation
 
-| Product name +
+| Produktname +
 (mandatory)
 | * according to the format setting *Item name* 
 
@@ -524,7 +524,7 @@ _or_
 
 * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Kategorie-Pfad*
 
-| Short description
+| Kurzbeschreibung
 | * according to the format setting *Preview text* 
 
 _or_ 
@@ -593,7 +593,7 @@ If colour variations exist, only images linked to the variation will be exported
 | Schuhspitze
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Schuhspitze*
 
-| Gender +
+| Geschlecht +
 (mandatory)
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Geschlecht*
 
@@ -601,7 +601,7 @@ If colour variations exist, only images linked to the variation will be exported
 (mandatory)
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Altersgruppe*
 
-| Size +
+| Größe +
 (mandatory)
 | * Attribute with the attribute link *Size* for Google Shopping
 
@@ -615,7 +615,7 @@ _or_
 (mandatory)
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Größensystem*
 
-| Brand +
+| Marke +
 (mandatory)
 | * *Manufacturer name* of the item 
 
@@ -638,7 +638,7 @@ _or_
 | Innenfutter
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Innenfutter*
 
-| Heel height
+| Absatzhöhe
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Absatzhöhe*
 
 *_Note:_* Save the measurement as well as the unit of measurement as the characteristics value for the item. Example: "2 cm"
@@ -652,7 +652,7 @@ _or_
 | Verschluss
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Verschluss*
 
-| Leg height
+| Schafthöhe
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Schafthöhe*
 
 *_Note:_* Save the measurement as well as the unit of measurement as the characteristics value for the item. Example: "5 cm"
@@ -667,7 +667,7 @@ _or_
 
 *_Note:_* Save the measurement as well as the unit of measurement as the characteristics value for the item. Example: "5 cm"
 
-| Pattern
+| Muster
 | * Attribute with the attribute link *Pattern* for Google Shopping
 
 _or_
@@ -676,7 +676,7 @@ _or_
 
 *_Note:_* Attributes will be prioritised.
 
-| Manufacturer colour +
+| Herstellerfarbe +
 (mandatory)
 | * Attribute with the attribute link *Colour* for Google Shopping
 
@@ -689,10 +689,10 @@ _or_
 | Innensohlenmaterial
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Innensohlenmaterial*
 
-| Occasion
+| Anlass
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Anlass*
 
-| Season
+| Saison
 | * Characteristic of the type *text* or *selection* with the *Check24 Fashion property* link *Saison*
 
 | Sonstige
