Added missing table formatting

--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -421,7 +421,7 @@ include::partial$exportdatei-herunterladen.adoc[]
 
 [[spalten-exportdatei-check24]]
 .Verfügbare Spalten der Exportdatei *Check24DE-Plugin*
-[cols="1,3"]
+[cols="1,3a"]
 |===
 | Spaltenbezeichnung | Erläuterung
 
@@ -492,7 +492,7 @@ include::partial$exportdatei-herunterladen.adoc[]
 
 [[spalten-exportdatei-check24]]
 .Verfügbare Spalten der Exportdatei *Check24DE Fashion*
-[cols="1,3"]
+[cols="1,3a"]
 |===
 | Spaltenbezeichnung | Erläuterung
 
