CHANGE pages in preparation for the new item ui becoming the default

--- a/docs/de-de/modules/artikel/pages/detailansicht.adoc
+++ b/docs/de-de/modules/artikel/pages/detailansicht.adoc
@@ -1,4 +1,4 @@
-= Detailansicht: Gestaltung
+= Detailansicht gestalten (neue Artikel-UI)
 :keywords: Neue Artikel-UI, Artikel » Artikel-UI, Artikel bearbeiten, Artikelbearbeitung, Bearbeitungsmodus, MyView, Navigation, Navigationsleiste, Portlet, Portlets, Eigenes Portlet, Ansicht, Ansichten, Ansicht erstellen, Detailansicht, Detailansichten, Artikelansicht, Artikelansichten, Variantenansicht, Variantenansichten, Element, Elemente
 :description: Du kannst Artikeldatensätze an deine Bedürfnisse anpassen. Lerne, die Ansicht individuell zu gestalten und die Anordnung der Artikeldetails zu ändern.
 :id: 0YO0UJ5
@@ -8,11 +8,8 @@
 zuletzt bearbeitet 04.08.2022
 ////
 
-Diese Seite beschäftigt sich mit der Detailansicht eines Produkts und erläutert das grundsätzliche Bedienkonzept.
-Du lernst:
-
-* xref:artikel:detailansicht.adoc#200[die Produktansicht anzupassen]
-* xref:artikel:detailansicht.adoc#1000[wie die Speicherlogik funktioniert]
+Diese Seite beschäftigt sich mit der Detailansicht eines Produkts im Backend und erläutert das grundsätzliche Bedienkonzept.
+Du lernst, wie du die Produktansicht so anpasst, dass sie nur die für dein Unternehmen relevanten Datenfelder enthält.
 
 video::682773880#t=1m57s[vimeo]
 
