--- a/docs/de-de/modules/artikel/pages/multipack-paket-set.adoc
+++ b/docs/de-de/modules/artikel/pages/multipack-paket-set.adoc
@@ -27,7 +27,7 @@ Ausführlichere Informationen dazu findest du im xref:artikel:multipack-paket-se
 ====
 
 [discrete]
-==== Voraussetzungen
+=== Voraussetzungen
 
 Diese Seite setzt voraus, dass du bereits Grundkenntnisse über die Artikelstruktur in plentymarkets hast.
 Du sollst den xref:artikel:struktur.adoc#[Unterschied zwischen Artikeln und Varianten] kennen und du sollst wissen, wie Varianten ihre xref:artikel:vererbung.adoc#[Daten vererben].
