--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -117,13 +117,17 @@ Vergewissere dich, dass du mit den im Menü *Einrichtung » Aufträge » Zahlung
 Aber in manchen Situationen willst du vielleicht stattdessen ein "UVP", "Setpreis" oder "Aktionspreis" erstellen.
 Falls ja, dann wähle den entsprechenden Preistyp (icon:check-square[role="blue"]).
 
-*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis darzustellen.
+*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis im plentyShop darzustellen.
 Produkte können nicht zu dem UVP-Preis verkauft werden.
 Damit der UVP im plentyShop angezeigt werden kann, muss die Variante mit dem UVP-Preis und dem Standardpreis verknüpft sein.
 Außerdem muss der UVP-Preis höher als der Standardpreis sein.
 Wenn diese Bedingungen erfüllt sind, wird der UVP im plentyShop durchgestrichen neben dem Verkaufspreis dargestellt.
 
-*Aktionspreis* = Ein Angebotspreis, der z.B. bei Amazon nur für eine begrenzte Zeit gilt.
+*Aktionspreis* = Ein Angebotspreis, der z.B. bei Google Shopping gilt.
+Der Google Shopping Feed enthält die Felder "price" und "sales_price".
+Das Feld "price" ist ein regulärer Verkaufspreis, d.h. kein Preistyp.
+Das Feld "sales_price" ist ein Aktionspreis.
+Der Aktionspreis wird nur dann im Feed ausgegeben, wenn er niedriger als der Verkaufspreis ist.
 
 *Setpreis* = xref:artikel:multipacks-pakete-sets.adoc#3000[Sets] sind eine Möglichkeit, Produkte zu kombinieren und als eine Verkaufseinheit anzubieten. Wenn du dich entscheidest, Produkte zu einem Set zu kombinieren, dann musst du den einzelnen Set-Bestandteilen einen Setpreis geben.
 
@@ -214,13 +218,17 @@ Aber in manchen Situationen willst du vielleicht stattdessen ein "UVP", "Setprei
 Falls ja, dann aktiviere diese Option (icon:toggle-on[role="blue"]).
 Ein zusätzlicher Konfigurationsschritt wird eingeblendet. In diesem Schritt legst du die Art des zu erstellenden Verkaufspreises fest.
 
-*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis darzustellen.
+*UVP* = Eine unverbindliche Preisempfehlung, die nur dazu dient, den Preisvergleich zwischen dem UVP und einem Standard-Verkaufspreis im plentyShop darzustellen.
 Produkte können nicht zu dem UVP-Preis verkauft werden.
 Damit der UVP im plentyShop angezeigt werden kann, muss die Variante mit dem UVP-Preis und dem Standardpreis verknüpft sein.
 Außerdem muss der UVP-Preis höher als der Standardpreis sein.
 Wenn diese Bedingungen erfüllt sind, wird der UVP im plentyShop durchgestrichen neben dem Verkaufspreis dargestellt.
 
-*Aktionspreis* = Ein Angebotspreis, der z.B. bei Amazon nur für eine begrenzte Zeit gilt.
+*Aktionspreis* = Ein Angebotspreis, der z.B. bei Google Shopping gilt.
+Der Google Shopping Feed enthält die Felder "price" und "sales_price".
+Das Feld "price" ist ein regulärer Verkaufspreis, d.h. kein Preistyp.
+Das Feld "sales_price" ist ein Aktionspreis.
+Der Aktionspreis wird nur dann im Feed ausgegeben, wenn er niedriger als der Verkaufspreis ist.
 
 *Setpreis* = xref:artikel:multipacks-pakete-sets.adoc#3000[Sets] sind eine Möglichkeit, Produkte zu kombinieren und als eine Verkaufseinheit anzubieten. Wenn du dich entscheidest, Produkte zu einem Set zu kombinieren, dann musst du den einzelnen Set-Bestandteilen einen Setpreis geben.
 
