--- a/docs/de-de/modules/artikel/pages/artikelsuche.adoc
+++ b/docs/de-de/modules/artikel/pages/artikelsuche.adoc
@@ -1,4 +1,4 @@
-= Artikel suchen
+= Artikel suchen (neue Artikel-UI)
 :keywords: Neue Artikel-UI, Artikel » Artikel-UI, Suche, Suchen, Artikel suchen, Artikelsuche, Artikel-Suche, Backend-Suche, Backendsuche, Backend suche, Filter, Filters, Artikelfilter, Artikel-Filter, Artikel Filter, Produktsuche, Produkt-Suche, Produkte suchen, Variantensuche, Varianten-Suche, Varianten suchen, Suchoption, Suchoptionen, Suchfilter, Suchverhalten, Suchergebnis, Suchergebnisse
 :description: Lerne, nach Artikeln und Varianten im Backend zu suchen. Mach dich mit den erweiterten Suchfiltern vertraut und lerne, wie du deine häufig verwendeten Sucheinstellungen speicherst.
 :page-aliases: suchen.adoc
