--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -1,4 +1,4 @@
-= Detailansicht: Verzeichnis der Datenfelder
+= Verzeichnis der Datenfelder (neue Artikel-UI)
 :keywords: Neue Artikel-UI, Artikel » Artikel-UI, Artikeldaten, Artikeldatensatz, Artikeldatensätze, Artikeldatenfeld, Artikeldatenfelder, Artikel-Datenfeld, Artikel-Datenfelder, Artikelverwaltung, Artikelbearbeitung, Artikel verwalten, Artikel bearbeiten, Artikel manuell verwalten, Artikel manuell bearbeiten, Element, Elemente, Portlet, Portlets, Datenfeld, Datenfelder
 :description: Erläuterungen zu den Elementen, Portlets und Datenfeldern eines Artikeldatensatzes.
 :id: BP4F3X1
