--- a/docs/de-de/modules/changelog/pages/2022-10-12.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-10-12.adoc
@@ -6,7 +6,7 @@
 :startWeekDate: 6. Oktober 2022
 :endWeekDate: 12. Oktober 2022
 
-// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
+// Ab dem Eintrag nach diesem weitermachen: https://forum.plentymarkets.com/t/prozesse-fehler-in-aktion-hochgeladene-dokumente-behoben-processes-fixed-bug-in-procedure-uploaded-documents/697477
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -41,6 +41,15 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlich
 
 +
 Du kannst diese Felder mit einem Klick auf *Spalten konfigurieren* im *Aufträge*-Portlet oben rechts aktivieren.
+* Der neue Messenger wurde im Menü *CRM » Messenger (Testphase)* veröffentlicht. Der alte Messenger wurde in diesem Zuge entfernt. Das neue Messenger-Portlet steht euch auch in den folgenden Menüs zur Verfügung:
+** *CRM » Kontakte*
+** *CRM » Schnellsuche*
+** *Waren » Bestellwesen » Bestellung*
+** *Aufträge » Abonnement*
+** *Aufträge » Aufträge (Testphase)*
+
++
+Weitere Informationen findest du im link:https://forum.plentymarkets.com/t/ankuendigung-release-des-neuen-messenger-announcement-release-of-the-new-messenger/695294[Forum^].
 
 [discrete]
 === Ereignisaktionen
@@ -81,6 +90,11 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
 * Im EmailBuilder im Widget *Auftragspositionen* fehlte die Artikel-ID. Dieses Feld wurde nun ergänzt.
 
+[discrete]
+=== Prozesse
+
+* In den Prozessen gab es in der Aktion *Hochgeladene Dokumente* einen Fehler, sodass keine Dokumente geladen werden konnten. Dieser Fehler wurde behoben.
+
 --
 
 early::
@@ -90,20 +104,19 @@ early::
 :version: early
 
 [discrete]
-== Neu
-
-Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
-
-
-
-'''
-
-[discrete]
 == Geändert
 
 Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== Kataloge
 
+* Wenn du einen Katalog öffnest, wird in der Navigation links unter *Filter* in Klammern angezeigt, wie viele Filter für den Katalog gesetzt sind. Bisher enthielt die angezeigte Zahl auch die Template-Filter, also die Filter, die automatisch gesetzt werden. Ab sofort ist das anders: Jetzt werden die Template-Filter nicht mehr berücksichtigt. Wenn du neben *Filter* also zum Beispiel eine 2 siehst, hast du selbst zwei Filter für diesen Katalog gesetzt.
+
+[discrete]
+=== UI
+
+* Ergebnisse der Eingaben in Filter-Menüs werden allgemein durch sogenannte Chips dargestellt. Das Verhalten dieser Chips wurde vereinheitlicht, sodass die Ergebnisse nach dem Absenden der Filter-Eingaben angezeigt bzw. aktualisiert werden. Beispiele sind zu finden in den Menüs *Einrichtung » Aufträge » Eigenschaftskopie* oder *Artikel » Artikel-UI*.
 
 '''
 
@@ -112,7 +125,15 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
+[discrete]
+=== Aufträge
 
+* Beim Duplizieren von Aufträgen wurden bei Gutscheinen die internen Referenzen nicht gesetzt. Dadurch konnten die Gutscheine bei Retouren nicht in die Artikelpreise eingerechnet werden. Dies wurde behoben.
+
+[discrete]
+=== Payment
+
+* Bei der Auswahl von Filtern im Menü Zahlungsverkehr ließ sich das Fenster nicht bis zum Suchen-Button nach unten scrollen, so dass die Filter nicht gesetzt werden konnten. Dieser Fehler ist nun behoben.
 
 --
 
@@ -126,9 +147,45 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/extendedimagecarouselwidget_55287[Erweiterter Bilder-Karussell Widget^]
+|1.0.4
+|-
+
+|link:https://marketplace.plentymarkets.com/checkoutgoodie_55295[Gratiszugabe im Warenkorb anzeigen^]
+|1.0.2
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportkuponade_4756[KUPONA^]
+|1.0.16
+|-
+
+|link:https://marketplace.plentymarkets.com/limango_7023[limango^]
+|1.4.18
+|-
+
+|link:https://marketplace.plentymarkets.com/metro_6600[Metro^]
+|2.2.6
+|-
+
+|link:https://marketplace.plentymarkets.com/mirakl_6917[Mirakl Connector^]
+|1.2.4
+|-
+
+|link:https://marketplace.plentymarkets.com/mytoys_54776[MyToys^]
+|1.0.49
+|-
+
+|link:https://marketplace.plentymarkets.com/payone_5434[PAYONE^]
+|2.5.2
+|-
+
+|link:https://marketplace.plentymarkets.com/paypal_4690[PayPal Checkout^]
+|6.0.20
+|-
+
+|link:https://marketplace.plentymarkets.com/itemvideoplugin_6915[Produkt Video Plugin^]
+|1.6.1
+|-
 
 |===
 
