Fixed some formatting errors

--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -279,8 +279,8 @@ Erstelle wie unten beschrieben das Exportformat *Check24DE-Plugin* für Check24.
 | Option *überschreiben* aktivieren und in die Felder *1* bis *10*, die die ID der Verfügbarkeit darstellen, Artikelverfügbarkeiten eintragen. Somit werden die Artikelverfügbarkeiten, die im Menü *Einrichtung » Artikel » Verfügbarkeit* eingestellt wurden, überschrieben.
 |===
 
-[#discrete]
-===== Exportformat Check24DE Fashion
+[discrete]
+==== Exportformat Check24DE Fashion
 
 *_Hinweis:_* Das Exportformat *Check24DE Fashion* ist veraltet, da es die Fashion-Kategorie auf Check24 nicht mehr gibt. Deshalb sollte dieses Exportformat nur in Ausnahmefällen und in Absprache mit Check24 verwendet werden.
 
@@ -482,6 +482,7 @@ gewählten Mandanten in den Formateinstellungen.
 | Das *Gewicht* wie im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Einstellungen » Maße* definiert.
 |===
 
+[discrete]
 ==== Check24DE: Verfügbare Spalten der Exportdatei *Check24DE Fashion*
 
 :export-format: Check24DE Fashion
